hockeypuck (0.1~alpha) UNRELEASED; urgency=low

  [ Casey Marshall ]
  * === added directory debian, cmd/hockeypuck/main.go,
    server.go, server_test.go, types.go:
    - Opening 0.1~alpha development, create debian/changelog.
    - Added comments to server.
  * === added directory pq, pq/cr_database.sql, pq/dr_database.sql,
    pq/worker.go:
    - Add a first cut at a database schema, random uuid generation.
    - Started pq-backed worker.
  * pq/cr_database.sql, pq/worker.go:
    - Commented the database schema & outlined plan for PqWorker.AddKey.
  * cmd/lspgp/main.go, pq/cr_database.sql, pq/dr_database.sql,
    pq/worker.go:
    - Add AGPL license to these files.
    - Removed redundant long_id and short_id from pub_key.
  * pgp.go:
    - Added public key merge functions we'll need for keyserver updates.
  * pq/cr_database.sql, pq/worker.go, pq/worker_test.go:
    - Add simple db connection test, fixed a few sql and query errors.

 -- Casey Marshall <casey.marshall@gazzang.com>  Mon, 20 Aug 2012 09:38:21 -0500